--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -20,7 +20,7 @@
         {#        integrity="sha512-G3jAqT2eM4MMkLMyQR5YBhvN5/Da3IG6kqgYqU9zlIH4+2a+GuMdLb5Kpxy6ItMdCfgaKlo2XFhI0dHtMJjoRw=="#}
         {#        crossorigin="anonymous"></script>#}
         <script>
-            Turbolinks.start()
+            // Turbolinks.start()
         </script>
     {% endblock %}
 
