--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -42,7 +42,7 @@
                             <div class="buttons">
                                 <a class="button is-white" style="color:rgb(226, 48, 78)"><i class="fas fa-heart"></i>&ensp;Add
                                     to wishlist</a>
-                                <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book
+                                <a class="button is-white has-text-primary" href='/discover/{{ listings[-1]["_id"] }}/booknow'><i class="fas fa-arrow-right"></i>&ensp;Book
                                     now</a>
                             </div>
                         </a>
