--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -31,7 +31,7 @@
                                     href={{ url_for('favourites') }}><i
                                             class="fas fa-heart"></i>&ensp;Add
                                         to wishlist</a>
-                                    <a class="button is-white has-text-primary" href="{{ url_for('book_now')}}"><i
+                                    <a class="button is-white has-text-primary" href='/discover/${listing['_id']}/booknow'><i
                                             class="fas fa-arrow-right"></i>&ensp;Book now</a>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                        href={{ url_for('favourites') }}><i
                                             class="fas fa-heart"></i>&ensp;Add
                                         to wishlist</a>
-                                    <a class="button is-white has-text-primary" href="{{ url_for('book_now')}}"><i
+                                    <a class="button is-white has-text-primary" href='/discover/{{ item["_id"] }}/booknow'><i
                                             class="fas fa-arrow-right"></i>&ensp;Book
                                         now</a>
                                 </div>
