--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -54,7 +54,7 @@
                         </div>
                         <br>
                         <div class="buttons is-centered">
-                            <a class="button is-white has-text-primary" href="{{ url_for('book_now') }}"><i
+                            <a class="button is-white has-text-primary" href='/discover/{{ item["_id"] }}/booknow'><i
                                     class="fas fa-arrow-right"></i>&ensp;Book now</a>
                         </div>
 
