--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -26,7 +26,7 @@
                     <!--END: Customise tour button-->
                     <div class="divider">OR</div>
                     <!--START: Book now form-->
-                    <form id="book_form" method="POST" action="/listings/{{ item['_id'] }}/booknow">
+                    <form id="book_form" method="POST" action="{{ url_for('book_now', tour_id=tour_id) }}">
                         {{ form.csrf_token }}
                     <div class="field">
                         <label class="label">Select Date</label>
@@ -56,7 +56,7 @@
 
                     <div class="field">
                         <div class="control">
-                                <button type="submit" class="button is-medium is-fullwidth is-link">
+                                <button type="submit" id="book_submit" class="button is-medium is-fullwidth is-link">
                                     <p class="has-text-weight-semibold">Book Now</p>
                                 </button>
                         </div>
