--- a/templates/shards/msg.html
+++ b/templates/shards/msg.html
@@ -1,42 +1,13 @@
-<!--START: message-->
-<div class="box is-pulled-left mt-3 p-3 has-background-grey-lighter"
-    style="max-width:70%; border-radius:20px 20px 20px 0px;">
-    <article class="media">
-        <figure class="media-left">
-            <p class="image is-48x48"><img src="/pfp.jpg"></p>
-            <span class="is-size-7">31m</span>
-        </figure>
-        <div class="media-content">
-            <div class="content m-0">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-                    ornare magna eros, eu pellentesque tortor vestibulum ut.
-                    Maecenas non massa sem. Etiam finibus odio quis feugiat
-                    facilisis.
-                </p>
-            </div>
-        </div>
-    </article>
-</div>
-<!--END: message-->
-<!--START: message-->
-<div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold"
-    style="max-width:70%; border-radius:20px 20px 0px 20px;">
-    <article class="media">
-        <div class="media-content">
-            <div class="content m-0">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-                    ornare magna eros, eu pellentesque tortor vestibulum ut.
-                    Maecenas non massa sem. Etiam finibus odio quis feugiat
-                    facilisis.
-                </p>
-            </div>
-        </div>
-        <figure class="media-right">
-            <p class="image is-48x48"><img src="/pfp.jpg"></p>
-            <span class="is-size-7">31m</span>
-        </figure>
-    </article>
-</div>
-<!--END: message-->
+{% for i in chatroom_display %}
+    <div>
+        <small><a href="" class="has-text-weight-bold">{{ i["sender_name"] }}</a>
+            <span class="has-text-grey">
+                {% if i["self"] %}
+                    — Me
+                {% endif %}
+            </span>
+        </small>
+        <p>{{ i["msg_content"] }}</p>
+        <hr>
+    </div>
+{% endfor %}
