Disable annoying chrome auto complete

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -169,7 +169,7 @@
                                     {{ form.csrf_token }}
                                     <!-- <input class="input is-fullwidth" type="text" placeholder="Enter your message.." /> -->
                                     {{ form.message(id="message", type="text", class="input is-fullwidth",
-                                    placeholder="Enter message", value="") }}
+                                    placeholder="Enter message", value="", autocomplete="off") }}
                             </div>
                             <div class="control">
                                 <button type="submit" class="button is-primary">
