--- a/templates/shards/msg.html
+++ b/templates/shards/msg.html
@@ -1,13 +1,25 @@
+{% if chatroom_display|count == 0 %}
+<div>
+    <p class="has-text-centered has-text-grey has-text-weight-light is-size-5">
+        <span class="is-size-1"><i class="far fa-folder-open"></i></span>
+        <br>
+        <span>Looks like this chat is sparkling clean</span>
+        <br>
+        <small>This chat is empty</small>
+    </p>
+</div>
+{% else %}
 {% for i in chatroom_display %}
-    <div>
-        <small><a href="" class="has-text-weight-bold">{{ i["sender_name"] }}</a>
-            <span class="has-text-grey">
-                {% if i["self"] %}
-                    — Me
-                {% endif %}
-            </span>
-        </small>
-        <p>{{ i["msg_content"] }}</p>
-        <hr>
-    </div>
+<div>
+    <small><a href="" class="has-text-weight-bold">{{ i["sender_name"] }}</a>
+        <span class="has-text-grey">
+            {% if i["self"]%}
+            — Me
+            {% endif %}
+        </span>
+    </small>
+    <p>{{ i["msg_content"] }}</p>
+    <hr>
+</div>
 {% endfor %}
+{% endif %}
