--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -118,14 +118,14 @@
         </div>
     {% endif %}
 
-    {% if verification_code_accepted %}
+    {% if verification_code_OK %}
         <div id="verificationOKModal" class="modal is-active">
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
                 <p class="title is-3 has-text-weight-bold has-text-centered">Good to go!</p>
                 <p class="has-text-centered">Thank you for verifying your email, you may now login.</p>
                 <br>
-                <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
+                <a onclick="$('#verificationOKModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
                         class="fas fa-sign-in-alt"></i>&ensp;Proceed to login</a>
             </div>
         </div>
@@ -135,13 +135,12 @@
         <div id="verificationFailedModal" class="modal is-active">
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
-                <p class="title is-3 has-text-weight-bold has-text-centered">Something broke!</p>
-                <p class="has-text-centered">We are unable to verify your email as the verification link used is
-                    invalid.</p>
-                <p class="has-text-centered">If you require a new verification code, login into your account and follow
-                    the instructions.</p>
+                <p class="title is-3 has-text-weight-bold has-text-centered">Oh no! Something broke.</p>
+                <p class="has-text-centered">We are unable to verify your email as the <b>verification link used is
+                    invalid</b>.</p>
+                <p class="has-text-centered">If you require a new verification code, login into your account and click 'resend'.</p>
                 <br>
-                <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
+                <a onclick="$('#verificationFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
                         class="fas fa-times"></i>&ensp;Close</a>
             </div>
         </div>
