--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -3,64 +3,29 @@
 {% block scripts %}
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/index.css">
-        $("#currentImg").change(function(){
-        var img = $(this).val();
-        $.ajax({
-        medthod: 'POST',
-        url:'/apis/upImg',
-        data: JSON.stringify({currentImg: img}),
-        success: function(data){
-        $("#currentImg").attr('src', 'data:image/png;base64, ' + data);
-        }
-        });
-        });
 
     <script>
+        var picture = null
 
-        let listno = 0
-        var itemList = []
-
-        // function AppendtoItem() {
-        //     current_list = document.getElementById('tour-item-list')
-        //     itemJson = {'items': itemList}
-        //     current_list.value = itemJson
-        // }
-
-        function AppendtoItem() {
-            current_list = document.getElementById('tour-item-list')
-            current_list.value = Array.from(itemList)
-            console.log(current_list)
+        function toBase64(file) {
+            var reader = new FileReader()
+            reader.readAsDataURL(file)
+            reader.onload = function () {
+                picture = reader.result
+                $('#currentImg').attr('src', reader.result);
+            }
+            reader.onerror = function (error) {
+                console.log('Error: ', error)
+            }
         }
 
-
-
-
-        function AddItinerary() {
-
-            current_item = document.getElementById('tour-items')
-            text = 
-            `
-                <li id='list_${listno}'>
-                    <div class="field has-addons" >
-                        <div class="control is-expanded">
-                            <input id='item_${listno}' class='input' type=text value="${current_item.value}" onkeyup="$('#item_${listno}').val($('#item_${listno}').val()); console.log($('#item_${listno}').val()); itemList.splice(${listno}, 1, $('#item_${listno}').val() + '#$%^#')">
-                        </div>
-                        <div class="control">
-                            <button class="button" onclick="$('#list_${listno}').remove();itemList.splice(${listno}, 1, 'None');AppendtoItem()">
-                                Delete
-                            </button>
-                        </div>
-                    </div>
-                </li>
-            `
-            $("#itinerary-list").append(`${text}`)
-            itemList.push(current_item.value + '#$%^#')
-            current_item.value = ''
-            listno += 1
-        }
+        $("#uploadImg").change(() => {
+            flag = toBase64($("#uploadImg").prop('files')[0])
+            console.log('this worked')
+        });
     </script>
 
-    
+
 
 {% endblock %}
 
@@ -105,10 +70,11 @@
                             </div>
 
 
+
                             <label class="label" for="tour-img">Tour Image</label>
                             <div class="file">
                                 <label class="file-label">
-                                    {{ form.tour_img(class="file-input", type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;") }}
+                                    {{ form.tour_img(class="file-input", id='uploadImg', type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;") }}
                                     <span class="file-cta">
                             <span class="file-icon">
                                 <i class="fa fa-upload"></i>
@@ -123,9 +89,10 @@
                                         {% endfor %}
                                     </ul>
                                 </label>
-                                <div id="currentImg">
-                                    <img src="data:image/png;base64, {{ imgBase64 }}"/>
-                                </div>
+                            </div>
+
+                            <div>
+                                <img id="currentImg" />
                             </div>
 
 
@@ -145,7 +112,7 @@
                             <label class="label" for="tour-items">Tour itinerary</label>
                             <div class="field has-addons">
                               <div class="control">
-                                <a class="button" onclick="AddItinerary();AppendtoItem()">
+                                <a class="button is-static">
                                   Add Itinerary
                                 </a>
                               </div>
@@ -154,22 +121,9 @@
                               </div>
                             </div>
 
-                            <div>
-                                <ol id='itinerary-list'></ol>
-                            </div>
-                            
 
-
-                            <div class='field'>
-                                <div class='control'>
-                                    <input name='tour_items_list[]', class='input', id='tour-item-list', type='hidden'>
-                                </div>
-                            </div>
-
-
-
-                            <label class="label" for="tour-loc">Tour Location</label>
-                            <div class="field has-addons">
+                            <div class="field">
+                              <label class="label" for="tour-loc">Tour Location</label>
                               <div class="control has-icons-left">
                                   <div class="select">
                                       {{ form.tour_loc(id="tour-loc") }}
@@ -182,11 +136,7 @@
                                   <span class="icon is-large is-left">
                                         <i class="fas fa-globe"></i>
                                   </span>
-                              </div>
-                              <div class="control">
-                                <a class="button"">
-                                  Add Location
-                                </a>
+
                               </div>
                             </div>
 
@@ -202,7 +152,6 @@
                                     </ul>
                                 </div>
                             </div>
-
 
 
                             <div class="field">
