--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -70,26 +70,23 @@
                             </div>
 
 
-
-                            <label class="label" for="tour-img">Tour Image</label>
-                            <div class="file">
+                            <div class="file has-name is-boxed">
                                 <label class="file-label">
                                     {{ form.tour_img(class="file-input", id='uploadImg', type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;") }}
-                                    <span class="file-cta">
-                            <span class="file-icon">
-                                <i class="fa fa-upload"></i>
-                            </span>
-                            <span class="file-label" id="filename-tour-img">
-                                Choose a file…
-                            </span>
-                            </span>
-                                    <ul>
-                                        {% for error in form.tour_img.errors %}
-                                            <li class="has-text-danger"> {{ error }}</li>
-                                        {% endfor %}
-                                    </ul>
+                                  <span class="file-cta">
+                                    <span class="file-icon">
+                                      <i class="fas fa-upload"></i>
+                                    </span>
+                                    <span class="file-label">
+                                      Choose a file…
+                                    </span>
+                                  </span>
+                                  <span class="file-name" id='filename-tour-img'>
+            
+                                  </span>
                                 </label>
-                            </div>
+                              </div>
+
 
                             <div>
                                 <img id="currentImg" />
