--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -4,27 +4,6 @@
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/index.css">
 
-    <script>
-        var picture = null
-
-        function toBase64(file) {
-            var reader = new FileReader()
-            reader.readAsDataURL(file)
-            reader.onload = function () {
-                picture = reader.result
-                $('#currentImg').attr('src', reader.result);
-            }
-            reader.onerror = function (error) {
-                console.log('Error: ', error)
-            }
-        }
-
-        $("#uploadImg").change(() => {
-            flag = toBase64($("#uploadImg").prop('files')[0])
-            console.log('this worked')
-        });
-    </script>
-
 
 
 {% endblock %}
@@ -58,7 +37,7 @@
                             <legend class='label'>Tour Name</legend>
 
                             <div class="field">
-                                <label class="label" for="tour-name"></label>
+                                
                                 <div class="control">
                                     {{ form.tour_name(id="tour-name", type="text", class="input", placeholder="Bishan Eco-walk") }}
                                     <ul>
@@ -69,23 +48,26 @@
                                 </div>
                             </div>
 
-
-                            <div class="file has-name is-boxed">
-                                <label class="file-label">
-                                    {{ form.tour_img(class="file-input", id='uploadImg', type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;") }}
-                                  <span class="file-cta">
-                                    <span class="file-icon">
-                                      <i class="fas fa-upload"></i>
-                                    </span>
-                                    <span class="file-label">
-                                      Choose a file…
-                                    </span>
-                                  </span>
-                                  <span class="file-name" id='filename-tour-img'>
-            
-                                  </span>
-                                </label>
-                              </div>
+                            
+                            <legend class='label'>Tour Image</legend>
+                            <div class='field'>
+                                <div class="file has-name is-boxed">
+                                    <label class="file-label">
+                                        {{ form.tour_img(class="file-input", id='uploadImg', type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;") }}
+                                      <span class="file-cta">
+                                        <span class="file-icon">
+                                          <i class="fas fa-upload"></i>
+                                        </span>
+                                        <span class="file-label">
+                                          Choose a file…
+                                        </span>
+                                      </span>
+                                      <span class="file-name" id='filename-tour-img'>
+                
+                                      </span>
+                                    </label>
+                                  </div>
+                            </div>
 
 
                             <div>
@@ -93,8 +75,8 @@
                             </div>
 
 
+                            <label class="label" for="tour-desc">Tour Description</label>
                             <div class="field">
-                                <label class="label" for="tour-desc">Tour Description</label>
                                 <div class="control">
                                     {{ form.tour_desc(class='textarea', id="tour-desc", placeholder="This Eco-walk will take you to different Nature attractions in Bishan, including: Gardens, Parks and Trails....") }}
                                     <ul>
@@ -178,4 +160,25 @@
             </div>
         </div>
     </section>
+
+    <script>
+        var picture = null
+
+        function toBase64(file) {
+            var reader = new FileReader()
+            reader.readAsDataURL(file)
+            reader.onload = function () {
+                picture = reader.result
+                $('#currentImg').attr('src', reader.result);
+            }
+            reader.onerror = function (error) {
+                console.log('Error: ', error)
+            }
+        }
+
+        $("#uploadImg").change(() => {
+            flag = toBase64($("#uploadImg").prop('files')[0])
+            console.log('this worked')
+        });
+    </script>
 {% endblock %}
